--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="right">
             <div class="info heading">
                 <h1>Sign Up</h1><br>
-                <p>This is not a real online service! 
-                    You know you need something like this in  
-                    your life to help you realise your 
-                    deepest dreams.</p>
+                <p>aur bhai kaisa hai! 
+                    login karde!  
+                    neche janam kundli likh de!
+                    jaldi!</p>
                 <p>Sign up <em>now</em> to get started</p>
                 <p class = "last-line">You <em>know</em> you want to.</p>
             </div>
